# bitcoin-discord

./: CMakeLists.txt  README.md
src/: config.hpp  main.cpp
src/bitcoin/: bitcoin.cpp  bitcoin.hpp
src/curl/: requests.cpp  requests.hpp
src/discord/: webhook.cpp  webhook.hpp
